Updated the workflow

--- a/.github/workflows/push-master-branch.yml
+++ b/.github/workflows/push-master-branch.yml
@@ -45,9 +45,9 @@ jobs:
                   sfdx sgd:source:delta --to "HEAD" --from "HEAD^" --output changed-sources/ --generate-delta --source force-app/
             # Authenticate to org
             - name: 'Authenticate to Production Org'
-              run: sfdx force://3MVG9wt4IL4O5wvI1iJzo..8HMcG.Z_.IriaQVo9l1DME6BdDNfOXSx5.Rr46TPoWiz4rUaB1lwIgbmIAPOMk:06CEB40B053F71D4E340F1C56F9129B0BD7D26C1F16DB7F7FE0BF91CCCE93840:opKt5G4d3NnqYeOqNS8tuMPMQ@https://abc108--aaadeploy.lightning.force.com/lightning/page/home -f ./SFDX_PRODUCTION_URL.txt -s -a production
+              run: sfdx force://3MVG9wt4IL4O5wvIdKgVtYLk19orN2liCvySEvXQjzzdas24djQTuzTLkBhODkoXkW_mcZqNFrX8_KEb.teRK:B45F133C9093F395FE7C76B0476DFB1F0A271D0473455E1E974D5A5A7C8BDA6B:iQ2NHNIyFB5lo7f9qYL2EBN4@https://d5i000003m3nheac-dev-ed.my.salesforce.com -f ./SFDX_PRODUCTION_URL.txt -s -a production
             - name: 'Deploy the entire branch to Production org'
-              run:  sfdx force:source:deploy  -p force-app -u sudhirbds-xljp@force.com.aaadeploy  --testlevel RunLocalTests --json
+              run:  sfdx force:source:deploy  -p force-app -u dopssudhir@salesforcedev.com  --testlevel RunLocalTests --json
 
             - name: 'Deploy destructive changes (if any) to Production org'
               run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings
