--- a/.github/workflows/push-master-branch.yml
+++ b/.github/workflows/push-master-branch.yml
@@ -4,7 +4,7 @@ name: Deploy master branch to production org
 # Definition when the workflow should run
 on:
     push:
-      branches: [ master]
+      branches: [ master ]
       paths:
         - 'force-app/**'
             
@@ -23,11 +23,13 @@ jobs:
                   tar xJf sfdx-linux-x64.tar.xz -C ~/sfdx --strip-components 1
                   echo "$HOME/sfdx/bin" >> $GITHUB_PATH
                   ~/sfdx/bin/sfdx version
+
             # install SFDX-Git-Delta plugin - https://github.com/scolladon/sfdx-git-delta
             - name: 'Installing sfdx git delta'
               run: | 
                   echo y | sfdx plugins:install sfdx-git-delta
                   sfdx plugins 
+
             # Checkout the source code
             - name: 'Checkout source code'
               uses: actions/checkout@v2
@@ -39,15 +41,18 @@ jobs:
               shell: bash
               run: |
                   echo ${{ secrets.SFDX_PRODUCTION_URL}} > ./SFDX_PRODUCTION_URL.txt
+
             - name: 'Create delta packages for new, modified or deleted metadata'
               run: | 
                   mkdir changed-sources
                   sfdx sgd:source:delta --to "HEAD" --from "HEAD^" --output changed-sources/ --generate-delta --source force-app/
+
             # Authenticate to org
             - name: 'Authenticate to Production Org'
-              run: sfdx force://3MVG9wt4IL4O5wvIdKgVtYLk19orN2liCvySEvXQjzzdas24djQTuzTLkBhODkoXkW_mcZqNFrX8_KEb.teRK:B45F133C9093F395FE7C76B0476DFB1F0A271D0473455E1E974D5A5A7C8BDA6B:iQ2NHNIyFB5lo7f9qYL2EBN4@https://d5i000003m3nheac-dev-ed.my.salesforce.com -f ./SFDX_PRODUCTION_URL.txt -s -a production
+              run: sfdx auth:sfdxurl:store -f ./SFDX_PRODUCTION_URL.txt -s -a production
+
             - name: 'Deploy the entire branch to Production org'
-              run:  sfdx force:source:deploy  -p force-app -u dopssudhir@salesforcedev.com  --testlevel RunLocalTests --json
+              run: sfdx force:source:deploy -p force-app --testlevel RunLocalTests --json
 
             - name: 'Deploy destructive changes (if any) to Production org'
-              run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings
+              run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
